--- a/buy credits/styles.css
+++ b/buy credits/styles.css
@@ -16,23 +16,15 @@ header {
 header .logo img {
     height: 40px;
 }
+
 .close-btn {
-    margin-left: 15px;
+    font-size: 28px;
     font-weight: bold;
-    float: right;
-    font-size: 22px;
-    line-height: 20px;
     cursor: pointer;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    background: #fff;
-    border-radius: 5px;
-    padding: 5px 10px;
 }
 
 .close-btn:hover {
-    color: #000;
+    color: red;
 }
 
 #alert-banner {
@@ -516,3 +508,4 @@ nav ul li.active {
         font-size: 14px;
     }
 }
+
